# instagraph-vc

./: .env.example  .gitignore  CONTRIBUTION.MD  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json  vercel.json
.github/workflows/: ci.yml  deploy-preview.yml  deploy-production.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: hero-graph-not-rendering.md  posthog-console-error-missing-guard.md
.planning/phases/01-backend-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/auth/: clerk.py
apps/api/app/generate/: prompts.py  router.py  schemas.py  service.py
apps/api/app/graph/: repository.py
apps/api/app/ratelimit/: cache.py  limiter.py  router.py
apps/api/app/scraper/: scraper.py  ssrf.py
apps/api/tests/: conftest.py  test_auth.py  test_cache.py  test_generate.py  test_limiter.py  test_repository.py  test_scraper.py  test_ssrf.py
apps/web/: .env.local.example  instrumentation-client.ts  next.config.ts  package.json  proxy.ts  sentry.server.config.ts  types.d.ts  vitest.config.ts
(+109 files in other folders)
