[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.5",
    "fastapi[standard]>=0.115",
    "lxml>=6.0.2",
    "neo4j==5.28.3",
    "openai>=1.40,<2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentry-sdk[fastapi]>=2.0",
    "supabase>=2.28.0",
    "upstash-redis>=1.6.0",
    "upstash-ratelimit>=1.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
